--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 :root {
     --primary-color: #4a90e2;
     --secondary-color: #6c757d;
-    --background-color: #f0f2f5;
-    --card-background: #ffffff;
+    --background-color: #afafaf;
+    --card-background: #d3d3d3;
     --accent-color: #2ecc71;
     --danger-color: #e74c3c;
     --text-color: #2c3e50;
@@ -18,9 +18,11 @@ body {
 }
 
 .navbar {
-    background: linear-gradient(135deg, var(--primary-color), #2980b9) !important;
-    box-shadow: var(--box-shadow);
-    padding: 1rem 0;
+    border-top-left-radius:0px;
+    border-bottom-left-radius:8px;
+    border-bottom-right-radius:8px;
+    transform:translatex(0px) translatey(0px);
+    background-color:#0b008e !important;
 }
 
 section {
@@ -139,4 +141,9 @@ section:hover {
     .navbar-brand {
         font-size: 1.5rem;
     }
+}
+
+/* Ocultar botões no modo de visualização */
+.modo-edicao {
+    display: none; /* Oculta por padrão */
 }
