--- a/style.css
+++ b/style.css
@@ -172,7 +172,7 @@ section:hover {
     left: 0;
     right: 0;
     bottom: 0;
-    filter: blur(8px); /* Aplica o efeito de desfoque */
+    backdrop-filter: blur(8px); /* Aplica o efeito de desfoque */
     z-index: 1;
 }
 
