--- a/style.css
+++ b/style.css
@@ -1,13 +1,29 @@
 :root {
+    /* Cores do tema claro */
     --primary-color: #ff0303;
     --secondary-color: #000000;
-    --background-color: #afafaf;
-    --card-background: #d3d3d3;
+    --background-color: #afafaf; /* Cor de fundo clara */
+    --card-background: #d3d3d3; /* Cor de fundo do card clara */
     --accent-color: #2ecc71;
     --danger-color: #e74c3c;
-    --text-color: #2c3e50;
+    --text-color: #2c3e50; /* Cor do texto clara */
     --border-radius: 12px;
     --box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        /* Cores do tema escuro */
+        --primary-color: #ff0303;
+        --secondary-color: #ffffff; /* Texto claro */
+        --background-color: #2c3e50; /* Cor de fundo escura */
+        --card-background: #34495e; /* Cor de fundo do card escura */
+        --accent-color: #2ecc71;
+        --danger-color: #e74c3c;
+        --text-color: #ecf0f1; /* Cor do texto clara */
+        --border-radius: 12px;
+        --box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+    }
 }
 
 body {
@@ -18,6 +34,8 @@ body {
     margin: 0;
     padding: 0;
 }
+
+/* O restante do seu CSS permanece o mesmo */
 
 /* Estilizando a barra de rolagem */
 ::-webkit-scrollbar {
@@ -210,3 +228,23 @@ section:hover {
 #digito {
     text-transform: uppercase;
 }
+
+#searchInput{
+    border-top-left-radius:50px;
+    border-top-right-radius:50px;
+    border-bottom-left-radius:50px;
+    border-bottom-right-radius:50px;
+    background-color:rgba(255,255,255,0);
+    border-style:solid;
+    border-top-color:#a30000;
+    border-right-color:#1600a8;
+    border-bottom-color:#a30000;
+    border-left-color:#0006c1;
+    color:#ffffff;
+    font-weight:300;
+    font-size:16px;
+    line-height:1em;
+    text-transform:none;
+    text-shadow:rgb(255, 255, 255) 1px 1px 0px, rgb(170, 170, 170) 2px 2px 0px;
+   }
+   
